<resources>
    <string name="app_name">FavoriteRappersBiography</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My favorite rappers biography</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_info">Terms and info</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_cart">Cart</string>
    <string name="info_big_text">Shipping Rates
Worldwide shipping available.
All shipment pricing is based upon weight.
INTERNATIONAL SHIPMENTS MAY BE SUBJECT TO PAY DUTIES AND TAXES WHICH IS OUT OF OUR CONTROL.
Order Processing
Please allow 5-15 business days to process orders.
        Once order is shipped you will receive a tracking number via email.
        Please allow 2-5 days to arrive once shipped for domestic shipments
        and an additional 10-15 days for international shipments. We are not responsible
        for any lost or stolen packages. If you have any questions regarding your order email
        kenstade@mail.ru.
DUE TO HIGH ORDER VOLUME AND THE CURRENT EVENTS TAKING PLACE, PLEASE EXPECT
        DELAYS IN ORDER PROCESSING.
Sales Tax
Sales tax is charged to orders shipped within the state of California.
        These shipments are subject to California sales tax on all products and shipping charges.
Return Policy
All sales are final. No refunds or exchanges.
        If you were sent the wrong item or if the
        product is defective contact us via email.</string>

</resources>