<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.favoriterappersbiography.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.favoriterappersbiography.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.favoriterappersbiography.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.favoriterappersbiography.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.favoriterappersbiography.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>